# inventory-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  dev.db  pyproject.toml  requirements.txt  task-definition.json
.github/workflows/: ecr-push.yml
alembic/: env.py
alembic/versions/: 6da0c94f7500_create_products_table.py
app/: api.py  db.py  domain.py  main.py  models.py  repo.py  repo_sqlalchemy.py  settings.py
fastapi_inventory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: ecr_push.sh
tests/: test_products.py
