[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-inventory"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2",
  "pytest>=7",
  "httpx>=0.27"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
